fix: CORS dinámico desde env var y config k8s para despliegue en VM
- SecurityConfig: leer CORS_ALLOWED_ORIGINS del entorno en vez de hardcodear localhost:3000
- configmap.yaml: DB_URL apunta a SQL Server (192.168.56.101) y agrega SPRING_LDAP_URLS
- allow-web-to-external-services.yaml: CIDRs de SQL Server y LDAP actualizados

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>